@@ -1183,9 +1183,14 @@ void Core::startMplayer( QString file, double seek ) {
 		proc->addArgument( QString::number( (int) mplayerwindow->videoLayer()->winId() ) );
 
 #if USE_COLORKEY
-		proc->addArgument("-colorkey");
-		//proc->addArgument( "0x"+QString::number(pref->color_key, 16) );
-		proc->addArgument( Helper::colorToRGB(pref->color_key) );
+		if (pref->vo == "directx") {
+			proc->addArgument("-colorkey");
+			//proc->addArgument( "0x"+QString::number(pref->color_key, 16) );
+			proc->addArgument( Helper::colorToRGB(pref->color_key) );
+		} else {
+			qDebug("Core::startMplayer: * not using -colorkey for %s", pref->vo.toUtf8().data());
+			qDebug("Core::startMplayer: * report if you can't see the video"); 
+		}
 #endif
 
 		// Set monitoraspect to desktop aspect
